--- a/cashbook/templates/cashbook/main.html
+++ b/cashbook/templates/cashbook/main.html
@@ -4,11 +4,29 @@
     <meta charset='utf-8' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/sketchy/bootstrap.min.css">
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
+    <style>
+    .date-button {
+      border: none;
+      background-color: transparent;
+    }
+    </style>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
-          initialView: 'dayGridMonth'
+          initialView: 'dayGridMonth',
+          dayCellContent: function(info) {
+            var dayNumber = info.dayNumberText;
+            var button = document.createElement('button');
+            button.innerText = dayNumber;
+            button.classList.add('date-button'); // Optional: Add a CSS class to the button for styling
+            return { domNodes: [button] };
+            },
+          dateClick: function(info) {
+            var date = info.date;
+            alert('이제 여기에 팝업창 띄울거임 히히히히힣');
+            // Perform any action you want when a date button is clicked
+          }
         });
         calendar.render();
       });
@@ -21,4 +39,5 @@
     </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
+
 </html>
