수입지출 create,delete 기능 완성

--- a/cashbook/templates/cashbook/navbar.html
+++ b/cashbook/templates/cashbook/navbar.html
@@ -15,7 +15,7 @@
           <a class="nav-link" href="/expense_chart/">Chart</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/about_me/">About</a>
         </li>
       </ul>
       <form class="d-flex">
