--- a/cashbook/templates/cashbook/calendar_scr.html
+++ b/cashbook/templates/cashbook/calendar_scr.html
@@ -67,16 +67,52 @@
           var date = info.date;
           openInputForm(date);
         },
-        events: [
-          {
-             id: 1,
-             title: 'test1',
-            start: '2023-06-23',
-            end: '2023-06-23',
+        eventClick: function(info) {
+          if (confirm("이벤트를 삭제하시겠습니까?")) {
+            // 여기에 삭제된 이벤트 정보를 서버로 전송하는 코드를 추가할 수 있습니다.
+            var pk = info.event.id;
+
+            fetch('deleteEvent/' + pk + "/", {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token }}' // Django에서 CSRF 보호를 사용하고 있다면 해당 토큰을 전송합니다.
+              },
+            })
+            .then(response => response.json())
+            .then(data => {
+              if (data.success) {
+                // 서버에서 삭제 성공한 경우
+                info.event.remove();
+                alert('삭제 성공');
+              } else {
+                // 서버에서 삭제 실패한 경우
+                console.error('이벤트 삭제 실패');
+                alert('삭제 실패');
+              }
+            })
+            .catch(error => {
+              console.error('AJAX 요청 실패:', error);
+              alert('AJAX 요청 실패');
+            });
           }
-        ]
+        },
       });
       calendar.render();
+
+      var events = JSON.parse('{{ events_json|escapejs }}');
+      for (var i = 0; i < events.length; i++) {
+        var event = events[i];
+        var eventColor = event.stat? 'green' : 'red';
+        calendar.addEvent({
+          id: event.id,
+          title: event.title,
+          start: event.date,
+          end: event.date,
+          backgroundColor: eventColor,
+          borderColor: eventColor,
+        });
+      }
 
       function openInputForm(date) {
         var modalOverlay = document.createElement('div');
