--- a/cashbook/templates/cashbook/inputForm.html
+++ b/cashbook/templates/cashbook/inputForm.html
@@ -57,7 +57,7 @@
   <div id="input-form-content" style="display: none;">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <form id="my-form" method="POST" action="">
+      <form id="my-form" method="POST" action="inputForm/">
         {% csrf_token %}
         <input type="hidden" name="date" value="{{ date }}">
         <hr/>
@@ -72,9 +72,9 @@
         </div>
         <div class="form-group">
           <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked="">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" value="true" checked="">
             <label class="btn btn-outline-primary" for="btnradio1">수입</label>
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" checked="">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" value="false" checked="">
             <label class="btn btn-outline-primary" for="btnradio2">지출</label>
           </div>
         </div>
