--- a/landing/templates/landing/about_me.html
+++ b/landing/templates/landing/about_me.html
@@ -1,5 +1,16 @@
-  {% extends 'cashbook/base.html' %}
+{% extends 'cashbook/base.html' %}
 
-  {% block main_area %}
-      <h1>about_me</h1>
-  {% endblock %}
+{% block main_area %}
+<div class="container">
+  <div class="page-header mx-auto" id="banner">
+      <div class="d-flex align-items-start justify-content-lg-start" style="height: 80vh;">
+          <div class="text-center">
+              <h1>about_me</h1>
+              <br/>
+              <br/>
+              <p class="lead">cloud programming final project</p>
+          </div>
+      </div>
+  </div>
+</div>
+{% endblock %}
