--- a/cashbook/templates/cashbook/base.html
+++ b/cashbook/templates/cashbook/base.html
@@ -4,11 +4,12 @@
   <meta charset='utf-8' />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/sketchy/bootstrap.min.css">
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
 
   {% include 'cashbook/calendar_scr.html' %}
 </head>
 
-<body>
+<body style="background-color: #F2F2F2;">
   {% include 'cashbook/navbar.html' %}
 
   {% block main_area %}
@@ -18,7 +19,7 @@
 
   {% endblock %}
 
-
+  {% include 'cashbook/chart_src.html' %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
