--- a/cashbook/templates/cashbook/inputForm.html
+++ b/cashbook/templates/cashbook/inputForm.html
@@ -72,9 +72,9 @@
         </div>
         <div class="form-group">
           <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" value="true" checked="">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" value="True" checked="">
             <label class="btn btn-outline-primary" for="btnradio1">수입</label>
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" value="false" checked="">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" value="False" checked="">
             <label class="btn btn-outline-primary" for="btnradio2">지출</label>
           </div>
         </div>
