--- a/landing/templates/landing/landing_page.html
+++ b/landing/templates/landing/landing_page.html
@@ -1,5 +1,16 @@
-  {% extends 'cashbook/base.html' %}
+{% extends 'cashbook/base.html' %}
 
-  {% block main_area %}
-      <h1>대문 페이지</h1>
-  {% endblock %}
+{% block main_area %}
+<div class="container">
+  <div class="page-header mx-auto" id="banner">
+      <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
+          <div class="text-center">
+              <img src="/static/images/app_img.png" alt="appname" width="400">
+              <br/>
+              <br/>
+              <p class="lead">Find easy-to-use household accounts!</p>
+          </div>
+      </div>
+  </div>
+</div>
+{% endblock %}
