페이지별 css 적용

--- a/cashbook/templates/cashbook/base.html
+++ b/cashbook/templates/cashbook/base.html
@@ -9,7 +9,7 @@
   {% include 'cashbook/calendar_scr.html' %}
 </head>
 
-<body style="background-color: #F2F2F2;">
+<body style="background-color: #E6E6E6;">
   {% include 'cashbook/navbar.html' %}
 
   {% block main_area %}
