--- a/cashbook/templates/cashbook/inputForm.html
+++ b/cashbook/templates/cashbook/inputForm.html
@@ -57,7 +57,7 @@
   <div id="input-form-content" style="display: none;">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <form id="my-form" method="POST" action="inputForm/">
+      <form id="my-form" method="POST" enctype="application/x-www-form-urlencoded" action="inputForm/">
         {% csrf_token %}
         <input type="hidden" name="date" value="{{ date }}">
         <hr/>
