--- a/landing/templates/landing/landing_page.html
+++ b/landing/templates/landing/landing_page.html
@@ -3,9 +3,9 @@
 {% block main_area %}
 <div class="container">
   <div class="page-header mx-auto" id="banner">
-      <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
+      <div class="d-flex align-items-center justify-content-center" style="height: 70vh;">
           <div class="text-center">
-              <img src="/static/images/app_img.png" alt="appname" width="400">
+              <img src="/static/images/applogo_img.png" alt="appname" width="400">
               <br/>
               <br/>
               <p class="lead">Find easy-to-use household accounts!</p>
