--- a/cashbook/templates/cashbook/main.html
+++ b/cashbook/templates/cashbook/main.html
@@ -1,7 +1,12 @@
   {% extends 'cashbook/base.html' %}
 
   {% block main_area %}
-    <div class="container border p-3" style="width: 80%; max-width: 90%; margin: 10px auto; background-color: #FFFFFF;">
-      <div id='calendar' style="max-height: fit-content; margin: 0 auto;"></div>
-    </div>
+        <div class="container p-0" style="width: 80%; max-width: 90%; margin: 10px auto; background-color: #FFFFFF;">
+          <div class="card p-3">
+            <div class="card-block">
+              <div id='calendar' style="max-height: fit-content; margin: 0 auto;"></div>
+            </div>
+          </div>
+
+        </div>
   {% endblock %}
