차트 데이터 불러오기 완성

--- a/cashbook/templates/cashbook/base.html
+++ b/cashbook/templates/cashbook/base.html
@@ -12,6 +12,8 @@
 <body style="background-color: #E6E6E6;">
   {% include 'cashbook/navbar.html' %}
 
+  <!-- 로그인 모달 폼 -->
+
   {% block main_area %}
 <!--  {% for a in acash %}
   <p value={{a.amount}}> {{ a.date | date:'Y-m-d' }} </p>
