--- a/cashbook/templates/cashbook/chart_src.html
+++ b/cashbook/templates/cashbook/chart_src.html
@@ -1,5 +1,7 @@
 <script>
   // Data retrieved from https://en.wikipedia.org/wiki/List_of_cities_by_average_temperature
+  var amount_data_in = JSON.parse('{{ amount_data_in|escapejs }}');
+  var amount_data_out = JSON.parse('{{ amount_data_out|escapejs }}');
   Highcharts.chart('container', {
   chart: {
     type: 'spline'
@@ -47,18 +49,14 @@
       symbol: 'square'
     },
     color: 'blue',
-    data: [5.2, 5.7, 8.7, 13.9, 18.2, 21.4, 25.0, {
-      y: 26.4,
-    }, 22.8, 17.5, 12.1, 7.6]
+    data: amount_data_in
   }, {
     name: '지출',
     marker: {
       symbol: 'circle'
     },
     color: 'red',
-    data: [{
-      y: 1.5,
-    }, 1.6, 3.3, 5.9, 10.5, 13.5, 14.5, 14.4, 11.5, 8.7, 4.7, 2.6]
+    data: amount_data_out
   }]
 });
 
