--- a/cashbook/templates/cashbook/navbar.html
+++ b/cashbook/templates/cashbook/navbar.html
@@ -32,8 +32,8 @@
                 Log out
               </button>
             {% else %}
-              <button class="btn btn-secondary my-2 my-sm-0 mx-3" type="button" data-bs-toggle="modal" data-bs-target="#loginModal">
-              Log in
+              <button class="btn btn-primary btn-secondary my-2 my-sm-0 mx-3" type="button" data-bs-toggle="modal" data-bs-target="#loginModal">
+                Log in
               </button>
             {% endif %}
         </form>
@@ -41,3 +41,51 @@
     </div>
   </div>
 </nav>
+
+
+<!--<div class="modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>-->
+
+{% if not user.is_authenticated %}
+<div class="modal" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="logInModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content" style="width: 80%; max-width: 90%";>
+                <div class="modal-header">
+                    <h3 class="modal-title" id="loginModalLabel"> <i class="fas fa-sign-in-alt"></i>&nbsp Log In</h3>
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-6 d-flex justify-content-center">
+                            <button type="button" class="btn btn-outline-dark btn-block btn-sm my-2"><i class="fab fa-google"></i>&nbsp&nbsp Log in with Google</button>
+                        </div>
+                        <div class="col-md-6">
+                            <button type="button" class="btn btn-outline-dark btn-block btn-sm my-2"><i class="far fa-envelope"></i>&nbsp&nbsp Sign Up with Google</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endif %}
+
