--- a/cashbook/templates/cashbook/base.html
+++ b/cashbook/templates/cashbook/base.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang='ko'>
+{% load static %}
 <head>
   <meta charset='utf-8' />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/sketchy/bootstrap.min.css">
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
 
-  {% include 'cashbook/calendar_scr.html' %}
+  {% block head_area %}
+
+  {%endblock %}
+
 </head>
 
 <body style="background-color: #E6E6E6;">
   {% include 'cashbook/navbar.html' %}
 
-  <!-- 로그인 모달 폼 -->
+  <!-- 로그인 모달 폼 넣을 자리-->
 
   {% block main_area %}
-<!--  {% for a in acash %}
-  <p value={{a.amount}}> {{ a.date | date:'Y-m-d' }} </p>
-  {% endfor %}-->
 
   {% endblock %}
 
   {% include 'cashbook/chart_src.html' %}
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
