--- a/cashbook/templates/cashbook/calendar_scr.html
+++ b/cashbook/templates/cashbook/calendar_scr.html
@@ -148,14 +148,14 @@
             const parser = new DOMParser();
             const doc = parser.parseFromString(html, 'text/html');
 
-            const bootstrapCSS = document.createElement('link');
+/*            const bootstrapCSS = document.createElement('link');
             bootstrapCSS.rel = 'stylesheet';
             bootstrapCSS.href = 'https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/sketchy/bootstrap.min.css';
             doc.head.appendChild(bootstrapCSS);
 
             const bootstrapJS = document.createElement('script');
             bootstrapJS.src = 'https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js';
-            doc.body.appendChild(bootstrapJS);
+            doc.body.appendChild(bootstrapJS);*/
 
             const form = doc.querySelector('form');
             form.classList.add('form-group');
@@ -163,7 +163,6 @@
             const hiddenInput = document.createElement('input');
             hiddenInput.type = 'hidden';
             hiddenInput.name = 'date';
-            /*hiddenInput.value = date.toISOString().split('T')[0];*/
             hiddenInput.value = date.getFullYear().toString() + "-" + (date.getMonth()+1).toString() + "-" + date.getDate().toString();
             form.appendChild(hiddenInput);
 
