--- a/expense_chart/templates/expense_chart/main_chart.html
+++ b/expense_chart/templates/expense_chart/main_chart.html
@@ -12,6 +12,17 @@
         </div>
     </div>
 </div>
+<hr/>
+<div class="col-md-12 col-xl-8 p-2" style="width: 60%; max-width: 70%; margin: 10px auto;">
+    <div class="card">
+        <div class="card-header border p-3">
+            <h3>Category Chart, {{month_name}}</h3>
+        </div>
+        <div class="card-block">
+            <div id="additional-container"></div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 
