chart data 기간 반영하도록 수정 & about_me form 수정

--- a/cashbook/templates/cashbook/chart_src.html
+++ b/cashbook/templates/cashbook/chart_src.html
@@ -105,7 +105,7 @@
 
     series: [
         {
-            name: 'Categories',
+            name: 'Category',
             colorByPoint: true,
             data: [
                 {
@@ -156,7 +156,7 @@
             ]
         }
     ],
-    drilldown: {
+    /*drilldown: {
         series: [
             {
                 name: 'ch',
@@ -359,7 +359,7 @@
                 ]
             }
         ]
-    }
+    }*/
 });
 
 
