--- a/landing/templates/landing/about_me.html
+++ b/landing/templates/landing/about_me.html
@@ -1,16 +1,11 @@
 {% extends 'cashbook/base.html' %}
 
 {% block main_area %}
-<div class="container">
-  <div class="page-header mx-auto" id="banner">
-      <div class="d-flex align-items-start justify-content-lg-start" style="height: 80vh;">
-          <div class="text-center">
+<div class="page-header mx-5 my-4" id="banner">
+      <div class="align-items-start justify-content-lg-start" style="height: 80vh;">
               <h1>about_me</h1>
               <br/>
-              <br/>
               <p class="lead">cloud programming final project</p>
-          </div>
       </div>
   </div>
-</div>
 {% endblock %}
