--- a/expense_chart/templates/expense_chart/main_chart.html
+++ b/expense_chart/templates/expense_chart/main_chart.html
@@ -16,7 +16,7 @@
 <div class="col-md-12 col-xl-8 p-2" style="width: 60%; max-width: 70%; margin: 10px auto;">
     <div class="card">
         <div class="card-header border p-3">
-            <h3>Category Chart, {{month_name}}</h3>
+            <h3>Category Chart, {{month_name}}, {{year}}</h3>
         </div>
         <div class="card-block">
             <div id="additional-container"></div>
