event별memo tippy 팝업 생성

--- a/cashbook/templates/cashbook/base.html
+++ b/cashbook/templates/cashbook/base.html
@@ -5,10 +5,11 @@
   <meta charset='utf-8' />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/sketchy/bootstrap.min.css">
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
 
   {% block head_area %}
-
   {%endblock %}
 
 </head>
@@ -16,10 +17,7 @@
 <body style="background-color: #E6E6E6;">
   {% include 'cashbook/navbar.html' %}
 
-  <!-- 로그인 모달 폼 넣을 자리-->
-
   {% block main_area %}
-
   {% endblock %}
 
   {% include 'cashbook/chart_src.html' %}
