--- a/cashbook/templates/cashbook/inputForm.html
+++ b/cashbook/templates/cashbook/inputForm.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/sketchy/bootstrap.min.css">
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
 
+  <script>
+    function reload_func() {
+      console.log("스크립트 실행 성공");
+      alert("hi");
+    }
+  </script>
+
   <style>
     .modal {
       display: block;
@@ -57,6 +64,7 @@
   <div id="input-form-content" style="display: none;">
     <div class="modal-content">
       <span class="close">&times;</span>
+
       <form id="my-form" method="POST" enctype="application/x-www-form-urlencoded" action="inputForm/">
         {% csrf_token %}
         <input type="hidden" name="date" value="{{ date }}">
@@ -70,11 +78,12 @@
             </div>
           </div>
         </div>
+
         <div class="form-group">
           <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" value="True" checked="">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" value="True" onclick="reload_func()">
             <label class="btn btn-outline-primary" for="btnradio1">수입</label>
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" value="False" checked="">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" value="False" checked="" onclick="alert('plz')">
             <label class="btn btn-outline-primary" for="btnradio2">지출</label>
           </div>
         </div>
@@ -82,12 +91,19 @@
 
         <div class="form-group">
           <label for="category">카테고리:</label>
-          <select name="category" class="form-control">
-            {% for c in actgr %}
-            <option value={{c.name}}> {{ c.name }} </option>
-            {% endfor %}
+          <select id="category-select" name="category" class="form-control">
+            {% if btnradio1.checked %}
+              {% for c in category_in %}
+              <option value={{c.name}}> {{ c.name }} </option>
+              {% endfor %}
+            {% else %}
+              {% for c in category_out %}
+              <option value={{c.name}}> {{ c.name }} </option>
+              {% endfor %}
+            {% endif %}
           </select>
         </div>
+
         <br>
         <div class="form-group">
           <label for="memo">메모:</label>
@@ -103,3 +119,4 @@
   </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
+
